name:           imbib
version:        1.2.1
category:       Text
synopsis:       Minimalistic .bib reference manager.
description:    The package has three parts:
                .
                1. A very minimial gui, featuring:
                .
                 - Drop of bibtex snippets to add a reference to your bibtex.
                 - Drop of pdf to save a fulltext version and a link in the bibtex.
                 - Double click on entry to open fulltex.
                 - Double right-click to open the entry in editor.
                 - Search box (author/title).
                .
                A simplistic configuration file is given in ~/.imbib; an example file
                is bundled with the package.
                .
                2. A library to manipulate bib files and do related management tasks.
                .
                The package contains some helper functions to manipultate .bib files
                en masse.  For example one function can help detecting duplicates in
                the bibtex file.
                .
                3. A batch processor for bib files.
                .
                A simplistic CLI for the above library.

                
license:        GPL
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.8
tested-with:    GHC==6.12.3
build-type:     Simple

data-files:
  icon.svg
  .imbib

library
  hs-source-dirs: lib
  extensions: TypeSynonymInstances, RecordWildCards, FlexibleInstances
  exposed-modules:
    Config
    TypedBibData
    BibDB
    BibAttach
    SuffixTreeCluster
  other-modules:
    Paths_imbib
  build-depends: base==4.*
  build-depends: bibtex==0.1.*
  build-depends: mtl==2.1.*
  build-depends: ConfigFile==1.1.*
  build-depends: directory==1.1.*
  build-depends: process==1.1.*
  build-depends: filepath==1.3.*
  build-depends: parsec==3.1.*
  build-depends: containers==0.*
  build-depends: split==0.1.*
  build-depends: bytestring==0.9.*


executable imbib
  main-is: Imbibed.hs
  extensions: TypeSynonymInstances, RecordWildCards, FlexibleInstances
  build-depends: imbib
  build-depends: mtl==2.1.*
  build-depends: base==4.*
  build-depends: gtk==0.12.*
  build-depends: glib==0.12.*
  build-depends: download-curl==0.*
  build-depends: curl==1.3.*
  build-depends: bytestring==0.*
  build-depends: gio==0.12.*
  build-depends: utf8-string==0.3.*
  build-depends: parsec==3.1.*
  
executable imbibatch
  main-is: Batch.hs
  extensions: TypeSynonymInstances, RecordWildCards, FlexibleInstances, RankNTypes, GADTs
  build-depends: imbib
  build-depends: base==4.*
  build-depends: directory==1.1.*
  build-depends: containers==0.*
  build-depends: filepath==1.3.*
  build-depends: bytestring==0.9.*

  other-modules:  
     MaybeIO

